12/04/24 Updated GeoIP databases
12/04/11 Added 'cron' function to denorarc for crontab usage 
12/04/11 Updated ScaryNet protocol
11/05/04 r435 Fixed formatting of docs/EVENTS
11/04/10 r428 documented the -protocoldebug option in the -help output
11/04/10 r428 made denora accept options that start with --
11/02/11 r419 Updated Denora icon
11/02/11 r416 Updated Windows installer

Fixes
12/07/17 Made ss_exclude use lower() in queries (fixes #1240)
12/07/17 Removed fnmatch from mysql_backup and now check result of file permission check properly
12/07/17 Found a couple of missing free()'s
12/07/16 #1418 is no more. Sorry for the many pushes, but it was worth it ;)
12/07/16 Removed is_md5 (no longer need it) and properly fix #1176 using #ifdef HAVE_CRYPT
12/07/15 Added is_md5() and used it to fix #1176 
12/07/15 Fixed double presence of REGSCRIPT in config.cache (fixes #1428)
12/07/15 xmlrpc didn't like free(av) which caused #1128
12/07/15 Fixed some memleaks in lastspoke.c and converted it to unix format
12/07/09 More warning fixes
12/07/08 Lots of changes in users.c/channels.c/ctcp.c
12/07/08 Fixed p10_gline to support 2.10.12's 6 arg gline format
12/07/02 Fixed Config not respecting DMEMORY settings, also did MYSQL the correct way now
12/07/02 Fixed debug output regarding nick changes
12/06/27 Fixed a few possible memleaks (thx cedric for the valgrind report)
12/06/26 Fixed a few compiler warnings 
12/06/12 Fixed topichandler for scarynet protocol
12/04/06 [1] Fixed geoipupd script breaking geoip (#1406)
12/03/31 Fixed grammar errors (#1260)
12/02/05 r436 Fixed ADMIN ADD command ignoring supplied host mask
11/04/10 r431 Fixed duplicate call to denora_set_umode() in ircdrizon protocol
11/04/10 r430 Fixed duplicate call to denora_set_umode() in charybdis protocol
11/04/10 r429 Fixed unknown user mode Z in charybdis protocol
11/03/30 r427 Fixed crash on nickchange in ngircd protocol (#1257)
11/02/13 r426 Fixed erroneous ','s in SQL queries in do_account()