@@ -333,9 +333,7 @@ int denora_event_euid(char *source, int ac, char **av)
 		    do_nick(source, av[0], av[4],
 		            !strcmp(av[8], "*") ? av[5] : av[8], s->name, av[10],
 		            ts, !stricmp(av[0], av[9]) ? ts : 0, av[6], av[5],
-		            av[7], atoi(av[1]), av[3], av[9]);
-		if (!strcmp(av[9], "*"))
-			do_account(user, av[9]);
+		            av[7], atoi(av[1]), av[3], !strcmp(av[9], "*") ? av[9] : NULL);
 	}
 	return MOD_CONT;
 }
